# swaywall

./: CHANGELOG.md  README.md  pyproject.toml  swaywall
.github/: release-please-config.json
.github/workflows/: deploy.yml  release-please.yml
swaywall/: main.py
