[project]
name = "swaywall"
version = "0.1.1"
description = "An intelligent wallpaper switcher for swaywm"
authors = [ { name = "cycneuramus", email = "<56681631+cycneuramus@users.noreply.github.com>" } ]
license = "GPL-3.0-only"
readme = "README.md"
requires-python = ">=3.6"
urls.repository = "https://github.com/cycneuramus/swaywall"
keywords = [ "sway", "swaywm", "wayland", "wallpaper", "automation" ]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
